// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar container Create new reminder - full workflow 1`] = `
<Calendar
  createReminder={[Function]}
  date={"2019-04-14T12:11:45.000Z"}
  reminders={Array []}
  updateReminder={[Function]}
>
  <ReminderForm
    initialDate={"2019-04-14T12:11:45.000Z"}
    onCancel={[Function]}
    onCreate={[Function]}
    saveText="Save new reminder"
    title="Create new reminder"
  >
    <div>
      <form>
        <h1>
          Create new reminder
        </h1>
        <label
          htmlFor="description"
        >
          Description
        </label>
        <input
          id="description"
          onChange={[Function]}
          placeholder="Up to 30 chars of description"
          type="text"
          value=""
        />
        <ErrorMsg>
          <span>
            Please enter a description
          </span>
        </ErrorMsg>
        <label
          htmlFor="city"
        >
          City where the even will happen
        </label>
        <input
          id="city"
          onChange={[Function]}
          type="text"
          value=""
        />
        <ErrorMsg>
          <span>
            Please enter a city
          </span>
        </ErrorMsg>
        <label
          htmlFor="date"
        >
          Date
        </label>
        <input
          id="date"
          onChange={[Function]}
          type="date"
          value="2019-04-14"
        />
        <label
          htmlFor="time"
        >
          Time
        </label>
        <input
          id="time"
          onChange={[Function]}
          type="time"
          value="12:11"
        />
        <label
          htmlFor="red"
        >
          <input
            checked={true}
            id="red"
            onChange={[Function]}
            type="radio"
          />
          Red
        </label>
        <label
          htmlFor="green"
        >
          <input
            checked={false}
            id="green"
            onChange={[Function]}
            type="radio"
          />
          Green
        </label>
        <label
          htmlFor="blue"
        >
          <input
            checked={false}
            id="blue"
            onChange={[Function]}
            type="radio"
          />
          Blue
        </label>
        <label
          htmlFor="yellow"
        >
          <input
            checked={false}
            id="yellow"
            onChange={[Function]}
            type="radio"
          />
          Yellow
        </label>
        <div>
          <button
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Save new reminder
          </button>
          <button
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </ReminderForm>
  <Month
    currentMonth={"2019-08-01T06:01:01.001Z"}
    elements={Array []}
    onNextMonth={[Function]}
    onPrevMonth={[Function]}
    today={"2019-04-14T12:11:45.000Z"}
  >
    <h1>
      <button
        onClick={[Function]}
      >
        &lt;
      </button>
      August 2019
      <button
        onClick={[Function]}
      >
        &gt;
      </button>
    </h1>
    <table>
      <thead>
        <tr>
          <th>
            Sunday
          </th>
          <th>
            Monday
          </th>
          <th>
            Tuesday
          </th>
          <th>
            Wednesday
          </th>
          <th>
            Thursday
          </th>
          <th>
            Friday
          </th>
          <th>
            Saturday
          </th>
        </tr>
      </thead>
      <tbody>
        <Component
          currentMonth={"2019-08-01T06:01:01.001Z"}
          elements={Array []}
          firstDay={"2019-07-28T05:00:00.001Z"}
          key="2019-07-28T00:00:00-05:00"
          today={"2019-04-14T12:11:45.000Z"}
        >
          <tr>
            <Component
              date={"2019-07-28T05:00:00.001Z"}
              isToday={false}
              key="2019-07-28T00:00:00-05:00"
              notThisMonth={true}
            >
              <td
                className=""
              >
                28
              </td>
            </Component>
            <Component
              date={"2019-07-29T05:00:00.001Z"}
              isToday={false}
              key="2019-07-29T00:00:00-05:00"
              notThisMonth={true}
            >
              <td
                className=""
              >
                29
              </td>
            </Component>
            <Component
              date={"2019-07-30T05:00:00.001Z"}
              isToday={false}
              key="2019-07-30T00:00:00-05:00"
              notThisMonth={true}
            >
              <td
                className=""
              >
                30
              </td>
            </Component>
            <Component
              date={"2019-07-31T05:00:00.001Z"}
              isToday={false}
              key="2019-07-31T00:00:00-05:00"
              notThisMonth={true}
            >
              <td
                className=""
              >
                31
              </td>
            </Component>
            <Component
              date={"2019-08-01T05:00:00.001Z"}
              isToday={false}
              key="2019-08-01T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                1
              </td>
            </Component>
            <Component
              date={"2019-08-02T05:00:00.001Z"}
              isToday={false}
              key="2019-08-02T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                2
              </td>
            </Component>
            <Component
              date={"2019-08-03T05:00:00.001Z"}
              isToday={false}
              key="2019-08-03T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                3
              </td>
            </Component>
          </tr>
        </Component>
        <Component
          currentMonth={"2019-08-01T06:01:01.001Z"}
          elements={Array []}
          firstDay={"2019-08-04T05:00:00.001Z"}
          key="2019-08-04T00:00:00-05:00"
          today={"2019-04-14T12:11:45.000Z"}
        >
          <tr>
            <Component
              date={"2019-08-04T05:00:00.001Z"}
              isToday={false}
              key="2019-08-04T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                4
              </td>
            </Component>
            <Component
              date={"2019-08-05T05:00:00.001Z"}
              isToday={false}
              key="2019-08-05T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                5
              </td>
            </Component>
            <Component
              date={"2019-08-06T05:00:00.001Z"}
              isToday={false}
              key="2019-08-06T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                6
              </td>
            </Component>
            <Component
              date={"2019-08-07T05:00:00.001Z"}
              isToday={false}
              key="2019-08-07T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                7
              </td>
            </Component>
            <Component
              date={"2019-08-08T05:00:00.001Z"}
              isToday={false}
              key="2019-08-08T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                8
              </td>
            </Component>
            <Component
              date={"2019-08-09T05:00:00.001Z"}
              isToday={false}
              key="2019-08-09T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                9
              </td>
            </Component>
            <Component
              date={"2019-08-10T05:00:00.001Z"}
              isToday={false}
              key="2019-08-10T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                10
              </td>
            </Component>
          </tr>
        </Component>
        <Component
          currentMonth={"2019-08-01T06:01:01.001Z"}
          elements={Array []}
          firstDay={"2019-08-11T05:00:00.001Z"}
          key="2019-08-11T00:00:00-05:00"
          today={"2019-04-14T12:11:45.000Z"}
        >
          <tr>
            <Component
              date={"2019-08-11T05:00:00.001Z"}
              isToday={false}
              key="2019-08-11T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                11
              </td>
            </Component>
            <Component
              date={"2019-08-12T05:00:00.001Z"}
              isToday={false}
              key="2019-08-12T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                12
              </td>
            </Component>
            <Component
              date={"2019-08-13T05:00:00.001Z"}
              isToday={false}
              key="2019-08-13T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                13
              </td>
            </Component>
            <Component
              date={"2019-08-14T05:00:00.001Z"}
              isToday={false}
              key="2019-08-14T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                14
              </td>
            </Component>
            <Component
              date={"2019-08-15T05:00:00.001Z"}
              isToday={false}
              key="2019-08-15T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                15
              </td>
            </Component>
            <Component
              date={"2019-08-16T05:00:00.001Z"}
              isToday={false}
              key="2019-08-16T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                16
              </td>
            </Component>
            <Component
              date={"2019-08-17T05:00:00.001Z"}
              isToday={false}
              key="2019-08-17T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                17
              </td>
            </Component>
          </tr>
        </Component>
        <Component
          currentMonth={"2019-08-01T06:01:01.001Z"}
          elements={Array []}
          firstDay={"2019-08-18T05:00:00.001Z"}
          key="2019-08-18T00:00:00-05:00"
          today={"2019-04-14T12:11:45.000Z"}
        >
          <tr>
            <Component
              date={"2019-08-18T05:00:00.001Z"}
              isToday={false}
              key="2019-08-18T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                18
              </td>
            </Component>
            <Component
              date={"2019-08-19T05:00:00.001Z"}
              isToday={false}
              key="2019-08-19T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                19
              </td>
            </Component>
            <Component
              date={"2019-08-20T05:00:00.001Z"}
              isToday={false}
              key="2019-08-20T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                20
              </td>
            </Component>
            <Component
              date={"2019-08-21T05:00:00.001Z"}
              isToday={false}
              key="2019-08-21T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                21
              </td>
            </Component>
            <Component
              date={"2019-08-22T05:00:00.001Z"}
              isToday={false}
              key="2019-08-22T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                22
              </td>
            </Component>
            <Component
              date={"2019-08-23T05:00:00.001Z"}
              isToday={false}
              key="2019-08-23T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                23
              </td>
            </Component>
            <Component
              date={"2019-08-24T05:00:00.001Z"}
              isToday={false}
              key="2019-08-24T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                24
              </td>
            </Component>
          </tr>
        </Component>
        <Component
          currentMonth={"2019-08-01T06:01:01.001Z"}
          elements={Array []}
          firstDay={"2019-08-25T05:00:00.001Z"}
          key="2019-08-25T00:00:00-05:00"
          today={"2019-04-14T12:11:45.000Z"}
        >
          <tr>
            <Component
              date={"2019-08-25T05:00:00.001Z"}
              isToday={false}
              key="2019-08-25T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                25
              </td>
            </Component>
            <Component
              date={"2019-08-26T05:00:00.001Z"}
              isToday={false}
              key="2019-08-26T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                26
              </td>
            </Component>
            <Component
              date={"2019-08-27T05:00:00.001Z"}
              isToday={false}
              key="2019-08-27T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                27
              </td>
            </Component>
            <Component
              date={"2019-08-28T05:00:00.001Z"}
              isToday={false}
              key="2019-08-28T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                28
              </td>
            </Component>
            <Component
              date={"2019-08-29T05:00:00.001Z"}
              isToday={false}
              key="2019-08-29T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                29
              </td>
            </Component>
            <Component
              date={"2019-08-30T05:00:00.001Z"}
              isToday={false}
              key="2019-08-30T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                30
              </td>
            </Component>
            <Component
              date={"2019-08-31T05:00:00.001Z"}
              isToday={false}
              key="2019-08-31T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                31
              </td>
            </Component>
          </tr>
        </Component>
      </tbody>
    </table>
  </Month>
  <div>
    <button
      className="create-reminder"
      onClick={[Function]}
    >
      Create new reminder
    </button>
  </div>
  <div>
    <label
      htmlFor="api_key"
    >
      API key
    </label>
    <input
      id="api_key"
      onChange={[Function]}
      type="text"
    />
  </div>
</Calendar>
`;

exports[`Calendar container Create new reminder - full workflow 2`] = `
<Calendar
  createReminder={[Function]}
  date={"2019-04-14T12:11:45.000Z"}
  reminders={Array []}
  updateReminder={[Function]}
>
  <ReminderForm
    initialDate={"2019-04-14T12:11:45.000Z"}
    onCancel={[Function]}
    onCreate={[Function]}
    saveText="Save new reminder"
    title="Create new reminder"
  >
    <div>
      <form>
        <h1>
          Create new reminder
        </h1>
        <label
          htmlFor="description"
        >
          Description
        </label>
        <input
          id="description"
          onChange={[Function]}
          placeholder="Up to 30 chars of description"
          type="text"
          value="asdf"
        />
        <label
          htmlFor="city"
        >
          City where the even will happen
        </label>
        <input
          id="city"
          onChange={[Function]}
          type="text"
          value="London"
        />
        <label
          htmlFor="date"
        >
          Date
        </label>
        <input
          id="date"
          onChange={[Function]}
          type="date"
          value="2019-04-14"
        />
        <label
          htmlFor="time"
        >
          Time
        </label>
        <input
          id="time"
          onChange={[Function]}
          type="time"
          value="12:11"
        />
        <label
          htmlFor="red"
        >
          <input
            checked={true}
            id="red"
            onChange={[Function]}
            type="radio"
          />
          Red
        </label>
        <label
          htmlFor="green"
        >
          <input
            checked={false}
            id="green"
            onChange={[Function]}
            type="radio"
          />
          Green
        </label>
        <label
          htmlFor="blue"
        >
          <input
            checked={false}
            id="blue"
            onChange={[Function]}
            type="radio"
          />
          Blue
        </label>
        <label
          htmlFor="yellow"
        >
          <input
            checked={false}
            id="yellow"
            onChange={[Function]}
            type="radio"
          />
          Yellow
        </label>
        <div>
          <button
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Save new reminder
          </button>
          <button
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </ReminderForm>
  <Month
    currentMonth={"2019-08-01T06:01:01.001Z"}
    elements={Array []}
    onNextMonth={[Function]}
    onPrevMonth={[Function]}
    today={"2019-04-14T12:11:45.000Z"}
  >
    <h1>
      <button
        onClick={[Function]}
      >
        &lt;
      </button>
      August 2019
      <button
        onClick={[Function]}
      >
        &gt;
      </button>
    </h1>
    <table>
      <thead>
        <tr>
          <th>
            Sunday
          </th>
          <th>
            Monday
          </th>
          <th>
            Tuesday
          </th>
          <th>
            Wednesday
          </th>
          <th>
            Thursday
          </th>
          <th>
            Friday
          </th>
          <th>
            Saturday
          </th>
        </tr>
      </thead>
      <tbody>
        <Component
          currentMonth={"2019-08-01T06:01:01.001Z"}
          elements={Array []}
          firstDay={"2019-07-28T05:00:00.001Z"}
          key="2019-07-28T00:00:00-05:00"
          today={"2019-04-14T12:11:45.000Z"}
        >
          <tr>
            <Component
              date={"2019-07-28T05:00:00.001Z"}
              isToday={false}
              key="2019-07-28T00:00:00-05:00"
              notThisMonth={true}
            >
              <td
                className=""
              >
                28
              </td>
            </Component>
            <Component
              date={"2019-07-29T05:00:00.001Z"}
              isToday={false}
              key="2019-07-29T00:00:00-05:00"
              notThisMonth={true}
            >
              <td
                className=""
              >
                29
              </td>
            </Component>
            <Component
              date={"2019-07-30T05:00:00.001Z"}
              isToday={false}
              key="2019-07-30T00:00:00-05:00"
              notThisMonth={true}
            >
              <td
                className=""
              >
                30
              </td>
            </Component>
            <Component
              date={"2019-07-31T05:00:00.001Z"}
              isToday={false}
              key="2019-07-31T00:00:00-05:00"
              notThisMonth={true}
            >
              <td
                className=""
              >
                31
              </td>
            </Component>
            <Component
              date={"2019-08-01T05:00:00.001Z"}
              isToday={false}
              key="2019-08-01T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                1
              </td>
            </Component>
            <Component
              date={"2019-08-02T05:00:00.001Z"}
              isToday={false}
              key="2019-08-02T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                2
              </td>
            </Component>
            <Component
              date={"2019-08-03T05:00:00.001Z"}
              isToday={false}
              key="2019-08-03T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                3
              </td>
            </Component>
          </tr>
        </Component>
        <Component
          currentMonth={"2019-08-01T06:01:01.001Z"}
          elements={Array []}
          firstDay={"2019-08-04T05:00:00.001Z"}
          key="2019-08-04T00:00:00-05:00"
          today={"2019-04-14T12:11:45.000Z"}
        >
          <tr>
            <Component
              date={"2019-08-04T05:00:00.001Z"}
              isToday={false}
              key="2019-08-04T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                4
              </td>
            </Component>
            <Component
              date={"2019-08-05T05:00:00.001Z"}
              isToday={false}
              key="2019-08-05T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                5
              </td>
            </Component>
            <Component
              date={"2019-08-06T05:00:00.001Z"}
              isToday={false}
              key="2019-08-06T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                6
              </td>
            </Component>
            <Component
              date={"2019-08-07T05:00:00.001Z"}
              isToday={false}
              key="2019-08-07T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                7
              </td>
            </Component>
            <Component
              date={"2019-08-08T05:00:00.001Z"}
              isToday={false}
              key="2019-08-08T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                8
              </td>
            </Component>
            <Component
              date={"2019-08-09T05:00:00.001Z"}
              isToday={false}
              key="2019-08-09T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                9
              </td>
            </Component>
            <Component
              date={"2019-08-10T05:00:00.001Z"}
              isToday={false}
              key="2019-08-10T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                10
              </td>
            </Component>
          </tr>
        </Component>
        <Component
          currentMonth={"2019-08-01T06:01:01.001Z"}
          elements={Array []}
          firstDay={"2019-08-11T05:00:00.001Z"}
          key="2019-08-11T00:00:00-05:00"
          today={"2019-04-14T12:11:45.000Z"}
        >
          <tr>
            <Component
              date={"2019-08-11T05:00:00.001Z"}
              isToday={false}
              key="2019-08-11T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                11
              </td>
            </Component>
            <Component
              date={"2019-08-12T05:00:00.001Z"}
              isToday={false}
              key="2019-08-12T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                12
              </td>
            </Component>
            <Component
              date={"2019-08-13T05:00:00.001Z"}
              isToday={false}
              key="2019-08-13T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                13
              </td>
            </Component>
            <Component
              date={"2019-08-14T05:00:00.001Z"}
              isToday={false}
              key="2019-08-14T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                14
              </td>
            </Component>
            <Component
              date={"2019-08-15T05:00:00.001Z"}
              isToday={false}
              key="2019-08-15T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                15
              </td>
            </Component>
            <Component
              date={"2019-08-16T05:00:00.001Z"}
              isToday={false}
              key="2019-08-16T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                16
              </td>
            </Component>
            <Component
              date={"2019-08-17T05:00:00.001Z"}
              isToday={false}
              key="2019-08-17T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                17
              </td>
            </Component>
          </tr>
        </Component>
        <Component
          currentMonth={"2019-08-01T06:01:01.001Z"}
          elements={Array []}
          firstDay={"2019-08-18T05:00:00.001Z"}
          key="2019-08-18T00:00:00-05:00"
          today={"2019-04-14T12:11:45.000Z"}
        >
          <tr>
            <Component
              date={"2019-08-18T05:00:00.001Z"}
              isToday={false}
              key="2019-08-18T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                18
              </td>
            </Component>
            <Component
              date={"2019-08-19T05:00:00.001Z"}
              isToday={false}
              key="2019-08-19T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                19
              </td>
            </Component>
            <Component
              date={"2019-08-20T05:00:00.001Z"}
              isToday={false}
              key="2019-08-20T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                20
              </td>
            </Component>
            <Component
              date={"2019-08-21T05:00:00.001Z"}
              isToday={false}
              key="2019-08-21T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                21
              </td>
            </Component>
            <Component
              date={"2019-08-22T05:00:00.001Z"}
              isToday={false}
              key="2019-08-22T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                22
              </td>
            </Component>
            <Component
              date={"2019-08-23T05:00:00.001Z"}
              isToday={false}
              key="2019-08-23T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                23
              </td>
            </Component>
            <Component
              date={"2019-08-24T05:00:00.001Z"}
              isToday={false}
              key="2019-08-24T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                24
              </td>
            </Component>
          </tr>
        </Component>
        <Component
          currentMonth={"2019-08-01T06:01:01.001Z"}
          elements={Array []}
          firstDay={"2019-08-25T05:00:00.001Z"}
          key="2019-08-25T00:00:00-05:00"
          today={"2019-04-14T12:11:45.000Z"}
        >
          <tr>
            <Component
              date={"2019-08-25T05:00:00.001Z"}
              isToday={false}
              key="2019-08-25T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                25
              </td>
            </Component>
            <Component
              date={"2019-08-26T05:00:00.001Z"}
              isToday={false}
              key="2019-08-26T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                26
              </td>
            </Component>
            <Component
              date={"2019-08-27T05:00:00.001Z"}
              isToday={false}
              key="2019-08-27T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                27
              </td>
            </Component>
            <Component
              date={"2019-08-28T05:00:00.001Z"}
              isToday={false}
              key="2019-08-28T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                28
              </td>
            </Component>
            <Component
              date={"2019-08-29T05:00:00.001Z"}
              isToday={false}
              key="2019-08-29T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                29
              </td>
            </Component>
            <Component
              date={"2019-08-30T05:00:00.001Z"}
              isToday={false}
              key="2019-08-30T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                30
              </td>
            </Component>
            <Component
              date={"2019-08-31T05:00:00.001Z"}
              isToday={false}
              key="2019-08-31T00:00:00-05:00"
              notThisMonth={false}
            >
              <td
                className=""
              >
                31
              </td>
            </Component>
          </tr>
        </Component>
      </tbody>
    </table>
  </Month>
  <div>
    <button
      className="create-reminder"
      onClick={[Function]}
    >
      Create new reminder
    </button>
  </div>
  <div>
    <label
      htmlFor="api_key"
    >
      API key
    </label>
    <input
      id="api_key"
      onChange={[Function]}
      type="text"
    />
  </div>
</Calendar>
`;

exports[`Calendar container Create new reminder button opens the form 1`] = `
<Fragment>
  <ReminderForm
    initialDate={"2019-04-14T12:11:45.000Z"}
    onCancel={[Function]}
    onCreate={[Function]}
    saveText="Save new reminder"
    title="Create new reminder"
  />
  <Month
    currentMonth={"2019-08-01T06:01:01.001Z"}
    elements={Array []}
    onNextMonth={[Function]}
    onPrevMonth={[Function]}
    today={"2019-04-14T12:11:45.000Z"}
  />
  <div>
    <button
      className="create-reminder"
      onClick={[Function]}
    >
      Create new reminder
    </button>
  </div>
  <div>
    <label
      htmlFor="api_key"
    >
      API key
    </label>
    <input
      id="api_key"
      onChange={[Function]}
      type="text"
    />
  </div>
</Fragment>
`;

exports[`Calendar container Create new reminder button opens the form 2`] = `
<Fragment>
  <ReminderForm
    initialDate={"2019-04-14T12:11:45.000Z"}
    onCancel={[Function]}
    onCreate={[Function]}
    saveText="Save new reminder"
    title="Create new reminder"
  />
  <Month
    currentMonth={"2019-08-01T06:01:01.001Z"}
    elements={Array []}
    onNextMonth={[Function]}
    onPrevMonth={[Function]}
    today={"2019-04-14T12:11:45.000Z"}
  />
  <div>
    <button
      className="create-reminder"
      onClick={[Function]}
    >
      Create new reminder
    </button>
  </div>
  <div>
    <label
      htmlFor="api_key"
    >
      API key
    </label>
    <input
      id="api_key"
      onChange={[Function]}
      type="text"
    />
  </div>
</Fragment>
`;

exports[`Calendar container render calendar 1`] = `
<Fragment>
  <Month
    currentMonth={"2019-08-01T06:01:01.001Z"}
    elements={Array []}
    onNextMonth={[Function]}
    onPrevMonth={[Function]}
    today={"2019-04-14T12:11:45.000Z"}
  />
  <div>
    <button
      className="create-reminder"
      onClick={[Function]}
    >
      Create new reminder
    </button>
  </div>
  <div>
    <label
      htmlFor="api_key"
    >
      API key
    </label>
    <input
      id="api_key"
      onChange={[Function]}
      type="text"
    />
  </div>
</Fragment>
`;
